tried to fix dark mode under design system

--- a/src/scss/3-base/_elements/_elements.scss
+++ b/src/scss/3-base/_elements/_elements.scss
@@ -1,14 +1,23 @@
 :root {
-  font-family: $ds-theme-font-family;
-  font-size: $ds-theme-base-font-size;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+  // font-family: $ds-theme-font-family;
+  // font-size: $ds-theme-base-font-size;
+  // -moz-osx-font-smoothing: grayscale;
+  // -webkit-font-smoothing: antialiased;
+  --color-primary: #CD104D;
+  --color-text: #2e353f;
+  --color-text-light: #4f5969;
+  --color-heading: #1a202c;
+  --color-heading-black: #000000;
+  --color-accent: #d1dce5;
+  --color-background: #FFFFFF;
+  --dark-mode: #000;
+  --dark-mode-hf: #CD104D;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
+// body {
+//     margin: 0;
+//     padding: 0;
+// }
 
 /////////////////////////////////////////////////////////////////////////////
 /// Utility Classes
@@ -20,10 +29,41 @@ $ds-brand-text-color:     ds-color(primary, 400);
 $ds-secondary-text-color: ds-color(neutral, 400);
 $ds-base-link-text-color: $ds-brand-text-color;
 
-html {
-  background-color: $app-background-color;
+body {
   color: $ds-base-text-color;
+  background-color: $app-background-color;
+  margin: 0;
+  padding: 0;
 }
+
+/* 3 */
+body.dark {
+  --color-background: $ds-brand-text-color; //#171717;
+  --color-primary: $ds-secondary-text-color; //#CD104D;
+  --color-text: #ffffff;
+  --color-text-light: #4f5969;
+  --color-heading: #DFDFDE;
+  --color-heading-black: #EDEDED;
+  --color-accent: #d1dce5;
+  // --image: url("../../images/moon.svg");
+}
+
+/* 4 */
+body.light {
+  --color-primary: $ds-brand-text-color; //#CD104D;
+  --color-text: $ds-secondary-text-color; //#2e353f;
+  --color-text-light: #4f5969;
+  --color-heading: #1a202c;
+  --color-heading-black: black;
+  --color-accent: #d1dce5;
+  --color-background: #FFFFFF;
+  // --image: url("../../images/sun.svg");
+}
+
+// html {
+//   background-color: $app-background-color;
+//   color: $ds-base-text-color;
+// }
 
 // Typography
 .ds-H1-text-style {
